BlazorApp/wwwroot/css/read.css
.book_card, .add_book_card {
    cursor: default;
    width: 300px;
    flex: none !important;
    transition: box-shadow 0.3s ease-in-out;
}

.add_book_card {
    width: 332px;
    height: 336px;
    padding: 0 !important;
    position: relative;
}

.book_card:hover, .add_book_card:hover {
    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19) !important;
    transition: box-shadow 0.3s ease-in-out;
}

.book-frame {
    border: none;
    width: 100%;
    height: 100%;
    overflow-x: clip;
}

.centered-element {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100vh;
}

